--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
-# GitHub Pagesへの自動デプロイワークフロー
-name: Deploy to GitHub Pages
+# Cloudflareへの自動デプロイワークフロー
+name: Deploy to Cloudflare
 
 on:
   # mainブランチへのプッシュ時に実行
@@ -8,20 +8,87 @@ on:
   # 手動実行も可能に
   workflow_dispatch:
 
-# GitHub Pagesへのデプロイ権限を設定
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 # 同時実行を制御（1つのデプロイのみ実行）
 concurrency:
-  group: pages
+  group: deploy-cloudflare
   cancel-in-progress: false
 
 jobs:
-  build:
+  # バックエンド（Cloudflare Workers）のデプロイ
+  deploy-workers:
+    name: Deploy to Cloudflare Workers
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Run type check
+        run: bun run typecheck
+
+      - name: Deploy to Cloudflare Workers
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: deploy --env production
+        env:
+          TURSO_DATABASE_URL: ${{ secrets.TURSO_DATABASE_URL }}
+          TURSO_AUTH_TOKEN: ${{ secrets.TURSO_AUTH_TOKEN }}
+          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+
+      - name: Health check
+        run: |
+          echo "Waiting for deployment to propagate..."
+          sleep 15
+          
+          # Workers URLを取得（wrangler.tomlのnameから推測、または環境変数から）
+          WORKER_NAME="typeflow-api"
+          WORKER_URL="https://${WORKER_NAME}.${{ secrets.CLOUDFLARE_SUBDOMAIN }}.workers.dev"
+          
+          # 環境変数でURLが指定されている場合はそれを使用
+          if [ -n "${{ secrets.CLOUDFLARE_WORKER_URL }}" ]; then
+            WORKER_URL="${{ secrets.CLOUDFLARE_WORKER_URL }}"
+          fi
+          
+          echo "Checking health endpoint: ${WORKER_URL}/health"
+          
+          # ヘルスチェック（最大3回リトライ）
+          MAX_RETRIES=3
+          RETRY_COUNT=0
+          HTTP_CODE=000
+          
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" "${WORKER_URL}/health" || echo "000")
+            
+            if [ "$HTTP_CODE" = "200" ]; then
+              echo "✅ Health check passed (HTTP $HTTP_CODE)"
+              exit 0
+            fi
+            
+            RETRY_COUNT=$((RETRY_COUNT + 1))
+            if [ $RETRY_COUNT -lt $MAX_RETRIES ]; then
+              echo "⚠️ Health check failed (HTTP $HTTP_CODE), retrying in 5 seconds... ($RETRY_COUNT/$MAX_RETRIES)"
+              sleep 5
+            fi
+          done
+          
+          echo "⚠️ Health check failed after $MAX_RETRIES attempts (HTTP $HTTP_CODE)"
+          echo "This might be expected if the worker URL is different or deployment is still propagating"
+          # ヘルスチェック失敗でもデプロイは続行（警告のみ）
+
+  # フロントエンド（Cloudflare Pages）のデプロイ
+  deploy-pages:
+    name: Deploy to Cloudflare Pages
+    runs-on: ubuntu-latest
+    needs: deploy-workers
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,22 +105,13 @@ jobs:
         run: bun run build
         env:
           NODE_ENV: production
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
-          path: ./dist
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: typeflow
+          directory: dist
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
